<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bnt_finalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="finalizar"
        android:text="@string/btn_finalizar" />

    <Button
        android:id="@+id/btn_navegador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_navegador" />

    <Button
        android:id="@+id/btn_llamada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_llamada" />

    <Button
        android:id="@+id/btn_mostrar_datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Listado"
        android:text="@string/btn_listar" />

</LinearLayout>