<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IngresoActivity">

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_nombre_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_apellido_hint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ingresar"
        android:text="@string/btn_ingresar" />

</LinearLayout>